hphp/hack/test/typecheck/disallow_unset_on_varray/disallow_unset_on_varray.php.like_types.exp
File "disallow_unset_on_varray.php", line 4, characters 3-15:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
  File "disallow_unset_on_varray.php", line 3, characters 22-32:
  This is an object of type vec<int> because it is an unenforceable type
File "disallow_unset_on_varray.php", line 8, characters 3-15:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
  File "disallow_unset_on_varray.php", line 7, characters 32-52:
  This is a vec_or_dict because it is an unenforceable type
File "disallow_unset_on_varray.php", line 12, characters 3-15:
In `strict` mode, `unset` is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
  File "disallow_unset_on_varray.php", line 11, characters 25-35:
  This is an object of type vec<int> because it is an unenforceable type
